Remove the jewel

--- a/bill.org
+++ b/bill.org
@@ -11,7 +11,7 @@
 
 ** Things You Should Know
 
-I live in Jacksonville - the jewel of northeast Florida
+I live in Jacksonville, FL
 
 And here is where I work: 
 
@@ -19,20 +19,15 @@ And here is where I work:
 
 ** What Makes Me Tick? 
 
-#+REVEAL_HTML: <img src="lana.jpg" alt="lana" style="max-width:30%" class="frag"/>
+#+REVEAL_HTML: <img src="lana.jpg" alt="lana" style="max-width:30%" class="fragment"/>
 
-#+REVEAL_HTML: <img src="boys.jpg" alt="boys" style="max-width:40%" class="frag"/>
+#+REVEAL_HTML: <img src="boys.jpg" alt="boys" style="max-width:40%" class="fragment"/>
 
 ** Feats of Strength
 
-#+ATTR_REVEAL: :frag t :frag-idx 2
-#+REVEAL_HTML: <img src="running.jpg" alt="running" style="max-width:30%" />
-
-#+ATTR_REVEAL: :frag t :frag-idx 1
-#+REVEAL_HTML: <img src="swimming.gif" alt="swimming" style="max-width:30%" />
-
-#+ATTR_REVEAL: :frag t :frag-idx 3
-#+REVEAL_HTML: <img src="jamie-bench.gif" alt="press" style="max-width:30%" />
+#+REVEAL_HTML: <img src="running.jpg" alt="running" style="max-width:30%" class="fragment"/>
+#+REVEAL_HTML: <img src="swimming.gif" alt="swimming" style="max-width:30%" class="fragment"/>
+#+REVEAL_HTML: <img src="jamie-bench.gif" alt="press" style="max-width:30%" class="fragment"/>
 
 ** Fun
 
