Add more about me

--- a/bill.org
+++ b/bill.org
@@ -11,6 +11,12 @@
 
 ** Things You Should Know
 
+- Been with Cotiviti 1 year, 6 days
+- Grew up in Northern Virginia
+- Graduated from the University of Virginia
+
+#+REVEAL: split
+
 I live in Jacksonville, FL
 
 And here is where I work: 
