--- a/bill.org
+++ b/bill.org
@@ -14,6 +14,8 @@
 - Been with Cotiviti 1 year, 6 days
 - Grew up in Northern Virginia
 - Graduated from the University of Virginia
+#+ATTR_REVEAL: :frag appear
+I am not artistic in any way
 
 #+REVEAL: split
 
